--- a/Vienna/Sources/Main window/BrowserTab.xib
+++ b/Vienna/Sources/Main window/BrowserTab.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <deployment identifier="macosx"/>
+        <deployment version="101000" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BrowserTab" customModule="Vienna" customModuleProvider="target">
             <connections>
+                <outlet property="addressBarContainer" destination="uJ9-8Z-SbI" id="nAd-Wx-mQE"/>
                 <outlet property="addressField" destination="hfe-el-NfG" id="Sfl-fz-aCb"/>
                 <outlet property="backButton" destination="0rn-z0-yA2" id="1VR-2q-DKI"/>
                 <outlet property="forwardButton" destination="aeH-Zd-eUj" id="gg6-8U-WAD"/>
@@ -19,48 +20,59 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
             <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-el-NfG">
-                    <rect key="frame" x="73" y="250" width="370" height="22"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="jDD-sF-hKH">
-                        <font key="font" usesAppearanceFont="YES"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
-                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0rn-z0-yA2">
-                    <rect key="frame" x="-6" y="244" width="49" height="32"/>
-                    <buttonCell key="cell" type="push" title="&lt;" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="j5n-Oc-Vrp">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                </button>
-                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aeH-Zd-eUj">
-                    <rect key="frame" x="30" y="244" width="49" height="32"/>
-                    <buttonCell key="cell" type="push" title="&gt;" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="0sn-QN-I23">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                </button>
-                <button verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="u6u-kW-eOW">
-                    <rect key="frame" x="437" y="244" width="49" height="32"/>
-                    <buttonCell key="cell" type="push" title="R" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="RBR-fu-w5E">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                </button>
+                <visualEffectView appearanceType="inheritedVibrantLight" verticalHuggingPriority="255" verticalCompressionResistancePriority="755" blendingMode="withinWindow" material="headerView" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="uJ9-8Z-SbI">
+                    <rect key="frame" x="0.0" y="250" width="480" height="22"/>
+                    <subviews>
+                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-el-NfG">
+                            <rect key="frame" x="73" y="0.0" width="370" height="22"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="jDD-sF-hKH">
+                                <font key="font" usesAppearanceFont="YES"/>
+                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0rn-z0-yA2">
+                            <rect key="frame" x="-6" y="-6" width="49" height="32"/>
+                            <buttonCell key="cell" type="push" title="&lt;" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="j5n-Oc-Vrp">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aeH-Zd-eUj">
+                            <rect key="frame" x="30" y="-6" width="49" height="32"/>
+                            <buttonCell key="cell" type="push" title="&gt;" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="0sn-QN-I23">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                        <button verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="u6u-kW-eOW">
+                            <rect key="frame" x="437" y="-6" width="49" height="32"/>
+                            <buttonCell key="cell" type="push" title="R" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="RBR-fu-w5E">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="hfe-el-NfG" firstAttribute="leading" secondItem="aeH-Zd-eUj" secondAttribute="trailing" id="2tq-wd-XnD"/>
+                        <constraint firstItem="0rn-z0-yA2" firstAttribute="top" secondItem="uJ9-8Z-SbI" secondAttribute="top" id="51X-jm-33S"/>
+                        <constraint firstItem="u6u-kW-eOW" firstAttribute="leading" secondItem="hfe-el-NfG" secondAttribute="trailing" id="6Ad-AV-YiB"/>
+                        <constraint firstItem="aeH-Zd-eUj" firstAttribute="leading" secondItem="0rn-z0-yA2" secondAttribute="trailing" constant="-1" id="FY7-fe-0JI"/>
+                        <constraint firstItem="hfe-el-NfG" firstAttribute="top" secondItem="uJ9-8Z-SbI" secondAttribute="top" id="aU4-DY-ePj"/>
+                        <constraint firstAttribute="bottom" secondItem="hfe-el-NfG" secondAttribute="bottom" id="amD-Df-YyL"/>
+                        <constraint firstAttribute="trailing" secondItem="u6u-kW-eOW" secondAttribute="trailing" id="meF-RV-XYW"/>
+                        <constraint firstItem="aeH-Zd-eUj" firstAttribute="top" secondItem="uJ9-8Z-SbI" secondAttribute="top" id="pKF-8K-XBI"/>
+                        <constraint firstItem="u6u-kW-eOW" firstAttribute="top" secondItem="uJ9-8Z-SbI" secondAttribute="top" id="ws5-8w-LgR"/>
+                        <constraint firstItem="0rn-z0-yA2" firstAttribute="leading" secondItem="uJ9-8Z-SbI" secondAttribute="leading" id="ykg-x5-Ox3"/>
+                    </constraints>
+                </visualEffectView>
             </subviews>
             <constraints>
-                <constraint firstItem="aeH-Zd-eUj" firstAttribute="leading" secondItem="0rn-z0-yA2" secondAttribute="trailing" constant="-1" id="0qK-Ht-JyJ"/>
-                <constraint firstItem="u6u-kW-eOW" firstAttribute="leading" secondItem="hfe-el-NfG" secondAttribute="trailing" id="7Yr-YT-a8y"/>
-                <constraint firstAttribute="trailing" secondItem="u6u-kW-eOW" secondAttribute="trailing" id="FLD-CE-kIh"/>
-                <constraint firstItem="u6u-kW-eOW" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="cY7-CU-jKb"/>
-                <constraint firstItem="0rn-z0-yA2" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="f3r-lr-60i"/>
-                <constraint firstItem="hfe-el-NfG" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="fEU-Fo-fSn"/>
-                <constraint firstItem="hfe-el-NfG" firstAttribute="leading" secondItem="aeH-Zd-eUj" secondAttribute="trailing" id="m7V-9l-k71"/>
-                <constraint firstItem="aeH-Zd-eUj" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="taw-8H-mm9"/>
-                <constraint firstItem="0rn-z0-yA2" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="xsB-fI-v91"/>
+                <constraint firstAttribute="trailing" secondItem="uJ9-8Z-SbI" secondAttribute="trailing" id="2UR-YF-ofd"/>
+                <constraint firstItem="uJ9-8Z-SbI" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="81W-Hm-3SM"/>
+                <constraint firstItem="uJ9-8Z-SbI" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="uQP-Y6-zM1"/>
             </constraints>
         </customView>
     </objects>
