--- a/Vienna/Sources/Main window/TabbedBrowserViewController.xib
+++ b/Vienna/Sources/Main window/TabbedBrowserViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,33 +16,23 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <rect key="frame" x="0.0" y="0.0" width="622" height="383"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <customView verticalHuggingPriority="255" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NQ9-WY-Cbm" customClass="MMTabBarView">
-                    <rect key="frame" x="0.0" y="244" width="480" height="28"/>
+                <customView verticalHuggingPriority="255" verticalCompressionResistancePriority="755" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NQ9-WY-Cbm" customClass="MMTabBarView">
+                    <rect key="frame" x="0.0" y="355" width="622" height="28"/>
                     <connections>
                         <outlet property="delegate" destination="-2" id="N7U-Ul-9ts"/>
+                        <outlet property="partnerView" destination="tnb-vE-K05" id="jY2-p6-YWx"/>
                         <outlet property="tabView" destination="tnb-vE-K05" id="vze-g7-tre"/>
                     </connections>
                 </customView>
-                <tabView type="noTabsNoBorder" translatesAutoresizingMaskIntoConstraints="NO" id="tnb-vE-K05">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="244"/>
+                <tabView horizontalCompressionResistancePriority="751" type="noTabsNoBorder" translatesAutoresizingMaskIntoConstraints="NO" id="tnb-vE-K05">
+                    <rect key="frame" x="0.0" y="0.0" width="622" height="355"/>
                     <font key="font" metaFont="system"/>
-                    <tabViewItems>
-                        <tabViewItem label="Tab" identifier="" id="PXV-jG-LhD">
-                            <view key="view" id="8kH-4s-SBS">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="244"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </view>
-                        </tabViewItem>
-                        <tabViewItem label="View" identifier="" id="Lwh-iR-ReR">
-                            <view key="view" id="1Sl-wy-1ZR">
-                                <rect key="frame" x="10" y="33" width="474" height="207"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </view>
-                        </tabViewItem>
-                    </tabViewItems>
+                    <connections>
+                        <outlet property="delegate" destination="NQ9-WY-Cbm" id="uzD-eS-JMk"/>
+                    </connections>
                 </tabView>
             </subviews>
             <constraints>
@@ -54,6 +44,7 @@
                 <constraint firstAttribute="bottom" secondItem="tnb-vE-K05" secondAttribute="bottom" id="shx-LQ-GFs"/>
                 <constraint firstAttribute="trailing" secondItem="tnb-vE-K05" secondAttribute="trailing" id="tNZ-Qs-8Ep"/>
             </constraints>
+            <point key="canvasLocation" x="210" y="209.5"/>
         </customView>
     </objects>
 </document>
