--- a/Vienna/Sources/Main window/BrowserTab.xib
+++ b/Vienna/Sources/Main window/BrowserTab.xib
@@ -8,7 +8,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BrowserTab" customModule="Vienna" customModuleProvider="target">
             <connections>
-                <outlet property="addressBarContainer" destination="uJ9-8Z-SbI" id="nAd-Wx-mQE"/>
+                <outlet property="addressBarContainer" destination="OeK-Vl-Vdl" id="acx-aq-dnE"/>
                 <outlet property="addressField" destination="hfe-el-NfG" id="Sfl-fz-aCb"/>
                 <outlet property="backButton" destination="0rn-z0-yA2" id="1VR-2q-DKI"/>
                 <outlet property="forwardButton" destination="aeH-Zd-eUj" id="gg6-8U-WAD"/>
@@ -19,61 +19,79 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="554" height="272"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <visualEffectView appearanceType="inheritedVibrantLight" verticalHuggingPriority="255" verticalCompressionResistancePriority="755" blendingMode="withinWindow" material="headerView" state="followsWindowActiveState" translatesAutoresizingMaskIntoConstraints="NO" id="uJ9-8Z-SbI">
-                    <rect key="frame" x="0.0" y="250" width="480" height="22"/>
+                <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" horizontalHuggingPriority="255" horizontalCompressionResistancePriority="755" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OeK-Vl-Vdl">
+                    <rect key="frame" x="0.0" y="251" width="554" height="21"/>
                     <subviews>
-                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-el-NfG">
-                            <rect key="frame" x="73" y="0.0" width="370" height="22"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="jDD-sF-hKH">
+                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0rn-z0-yA2">
+                            <rect key="frame" x="0.0" y="0.0" width="29" height="21"/>
+                            <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="browserPreviousButton" imagePosition="only" alignment="center" inset="2" id="j5n-Oc-Vrp">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="systemBold" size="12"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="back:" target="-2" id="qNx-fN-S3N"/>
+                            </connections>
+                        </button>
+                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aeH-Zd-eUj">
+                            <rect key="frame" x="29" y="0.0" width="27" height="21"/>
+                            <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="browserNextButton" imagePosition="only" alignment="center" inset="2" id="0sn-QN-I23">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="systemBold" size="12"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="forward:" target="-2" id="w7v-U4-Rfp"/>
+                            </connections>
+                        </button>
+                        <textField horizontalHuggingPriority="200" verticalHuggingPriority="750" horizontalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-el-NfG">
+                            <rect key="frame" x="56" y="0.0" width="469" height="21"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="border" drawsBackground="YES" id="jDD-sF-hKH">
                                 <font key="font" usesAppearanceFont="YES"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <action selector="loadPageFromAddressBar:" target="-2" id="kJy-ZN-1TI"/>
+                            </connections>
                         </textField>
-                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0rn-z0-yA2">
-                            <rect key="frame" x="-6" y="-6" width="49" height="32"/>
-                            <buttonCell key="cell" type="push" title="&lt;" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="j5n-Oc-Vrp">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                        </button>
-                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aeH-Zd-eUj">
-                            <rect key="frame" x="30" y="-6" width="49" height="32"/>
-                            <buttonCell key="cell" type="push" title="&gt;" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="0sn-QN-I23">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                        </button>
                         <button verticalHuggingPriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="u6u-kW-eOW">
-                            <rect key="frame" x="437" y="-6" width="49" height="32"/>
-                            <buttonCell key="cell" type="push" title="R" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="RBR-fu-w5E">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
+                            <rect key="frame" x="525" y="0.0" width="29" height="21"/>
+                            <buttonCell key="cell" type="recessed" bezelStyle="recessed" image="browserRefreshButton" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="RBR-fu-w5E">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="systemBold" size="12"/>
                             </buttonCell>
+                            <connections>
+                                <action selector="reload:" target="-2" id="fgH-tf-FM6"/>
+                            </connections>
                         </button>
                     </subviews>
-                    <constraints>
-                        <constraint firstItem="hfe-el-NfG" firstAttribute="leading" secondItem="aeH-Zd-eUj" secondAttribute="trailing" id="2tq-wd-XnD"/>
-                        <constraint firstItem="0rn-z0-yA2" firstAttribute="top" secondItem="uJ9-8Z-SbI" secondAttribute="top" id="51X-jm-33S"/>
-                        <constraint firstItem="u6u-kW-eOW" firstAttribute="leading" secondItem="hfe-el-NfG" secondAttribute="trailing" id="6Ad-AV-YiB"/>
-                        <constraint firstItem="aeH-Zd-eUj" firstAttribute="leading" secondItem="0rn-z0-yA2" secondAttribute="trailing" constant="-1" id="FY7-fe-0JI"/>
-                        <constraint firstItem="hfe-el-NfG" firstAttribute="top" secondItem="uJ9-8Z-SbI" secondAttribute="top" id="aU4-DY-ePj"/>
-                        <constraint firstAttribute="bottom" secondItem="hfe-el-NfG" secondAttribute="bottom" id="amD-Df-YyL"/>
-                        <constraint firstAttribute="trailing" secondItem="u6u-kW-eOW" secondAttribute="trailing" id="meF-RV-XYW"/>
-                        <constraint firstItem="aeH-Zd-eUj" firstAttribute="top" secondItem="uJ9-8Z-SbI" secondAttribute="top" id="pKF-8K-XBI"/>
-                        <constraint firstItem="u6u-kW-eOW" firstAttribute="top" secondItem="uJ9-8Z-SbI" secondAttribute="top" id="ws5-8w-LgR"/>
-                        <constraint firstItem="0rn-z0-yA2" firstAttribute="leading" secondItem="uJ9-8Z-SbI" secondAttribute="leading" id="ykg-x5-Ox3"/>
-                    </constraints>
-                </visualEffectView>
+                    <visibilityPriorities>
+                        <integer value="1000"/>
+                        <integer value="1000"/>
+                        <integer value="1000"/>
+                        <integer value="1000"/>
+                    </visibilityPriorities>
+                    <customSpacing>
+                        <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
+                    </customSpacing>
+                </stackView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="uJ9-8Z-SbI" secondAttribute="trailing" id="2UR-YF-ofd"/>
-                <constraint firstItem="uJ9-8Z-SbI" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="81W-Hm-3SM"/>
-                <constraint firstItem="uJ9-8Z-SbI" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="uQP-Y6-zM1"/>
+                <constraint firstItem="OeK-Vl-Vdl" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="34l-kk-2pc"/>
+                <constraint firstAttribute="trailing" secondItem="OeK-Vl-Vdl" secondAttribute="trailing" id="6zd-EX-bzd"/>
+                <constraint firstItem="OeK-Vl-Vdl" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="8gi-qT-pfV"/>
             </constraints>
+            <point key="canvasLocation" x="107" y="154"/>
         </customView>
     </objects>
+    <resources>
+        <image name="browserNextButton" width="27" height="21"/>
+        <image name="browserPreviousButton" width="29" height="21"/>
+        <image name="browserRefreshButton" width="29" height="21"/>
+    </resources>
 </document>
